--- a/Pages/Counter.razor
+++ b/Pages/Counter.razor
@@ -1,7 +1,7 @@
 ﻿@page "/counter"
 
 
-<p>asodijdjaisoasd</p>
+<p>FDSJDSJDFSUJSDIUJADUSIASDIJUADWUIJADIUWJIUJADW</p>
 <input style="margin-bottom:15px" inputmode="numeric" @bind-value="firstNumber" />
 <p>Second number</p>
 <input style="margin-bottom:15px" inputmode="numeric" @bind-value="secondNumber" />
